# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//chrome/process_version_rc_template.gni")

if (is_win) {
  process_version_rc_template("flmojo_version") {
    template_file = "flmojo_version.rc.version"
    output = "$target_gen_dir/flmojo_version.rc"
  }
}

source_set("flmojo") {
  # Meta-target, don't link into production code.
  testonly = true
  deps = [ ]

  if (!((is_linux || is_chromeos) && current_cpu == "x86")) {
    deps += [ "//mojo/public" ]
  }

  if (is_android) {
    deps += [ "//mojo/public/java/system" ]
  }

  deps += [ "//mojo/core/embedder" ]

  deps += [
    "//third_party/mmmojo/common:content_browser_child_process_launcher",
    "//third_party/mmmojo/common:common",
  ]

  public_configs = [ "//third_party/mmmojo:mmmojo_config" ]

  defines = [
    "FLMOJO_SHARED_LIBRARY",
    "FLMOJO_IMPLEMENTATION",
  ]
  
  sources = [
    "flmojo.cc",
    "flmojo_log.cc",
  ]

  if (is_win) {
    sources += [ "flmojo.def" ]

    deps += [ ":flmojo_version" ]
  }

  configs += [
    "//content:content_implementation",
  ]
}